[tool.poetry]
name = "spikesorting-scripts"
version = "0.1.0"
description = ""
authors = ["Jules Lebert <55235543+JulesLebert@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "spikesorting_scripts"}]

[tool.poetry.dependencies]
python = "^3.8"
spikeinterface = "^0.96.1"
jsmin = "^3.0.1"
pandas = "^1.5.2"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
tdt = "^0.5.4"
joblib = "~1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
